--- a/package.json
+++ b/package.json
@@ -32,5 +32,13 @@
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@auth/sveltekit": "^1.4.1",
+		"@supabase/ssr": "^0.4.0",
+		"@supabase/supabase-js": "^2.44.3",
+		"axios": "^1.7.2",
+		"google-auth-library": "^9.11.0",
+		"googleapis": "^140.0.1"
+	}
 }
