--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
+		"cloudinary": "^2.3.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -24,6 +25,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sharp": "^0.33.4",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
@@ -38,7 +40,18 @@
 		"@supabase/ssr": "^0.4.0",
 		"@supabase/supabase-js": "^2.44.3",
 		"axios": "^1.7.2",
+		"canvas": "^2.11.2",
+		"color.js": "^1.2.0",
+		"colorthief": "^2.4.0",
+		"dexie": "^4.0.8",
+		"dotenv": "^16.4.5",
+		"fast-average-color": "^9.4.0",
+		"fast-average-color-node": "^3.0.0",
 		"google-auth-library": "^9.11.0",
-		"googleapis": "^140.0.1"
+		"googleapis": "^140.0.1",
+		"idb-keyval": "^6.2.1",
+		"lucide-svelte": "^0.408.0",
+		"openai": "^4.52.7",
+		"ts-node": "^10.9.2"
 	}
 }
